--- a/generators/app/templates/servlet-view/pom.xml
+++ b/generators/app/templates/servlet-view/pom.xml
@@ -25,6 +25,14 @@
   <properties>
     <ambari.dir>${project.parent.parent.parent.basedir}</ambari.dir>
   </properties>
+
+  <parent>
+    <groupId>org.apache.ambari.contrib.views</groupId>
+    <artifactId>ambari-contrib-views</artifactId>
+    <version>2.0.0.0-SNAPSHOT</version>
+  </parent>
+
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
