--- a/generators/app/templates/java-ember-complete/src/main/resources/view.log4j.properties
+++ b/generators/app/templates/java-ember-complete/src/main/resources/view.log4j.properties
@@ -24,4 +24,4 @@ log4j.appender.{{name}}.layout=org.apache.log4j.PatternLayout
 log4j.appender.{{name}}.layout.ConversionPattern=%d{DATE} %5p [%t] [%X{viewName} %X{viewVersion} %X{viewInstanceName}] %c{1}:%L - %m%n
 
 log4j.logger.org.apache.ambari.view.filebrowser=INFO,{{name}}
-log4j.additivity.org.apache.ambari.view.filebrowser= false
+log4j.additivity.org.apache.ambari.view.example= false
